refactor(immutability): improve modifier list handling in SymbolInfo
- Update getModifierList to use a private modifierList method
- Ensure modifier list is unmodifiable and returns an empty list if null
- add isFinal() method